--- a/設定方法.md
+++ b/設定方法.md
@@ -5,6 +5,13 @@
 自動作成されるコード.gsファイルを削除  
 ファイル > スクリプト > "code.gs" 作成  
 code.gs.js のコードをcode.gsにペースト  
+4. code.gs スプレッドシートIDを指定  
+スプレッドシートのURLからIDを取得して code.gs > `const fileId = 'xxx';` 内の `xxx` にペースト
+```JavaScript
+// スプレッドシートのURLからコピーしたIDを指定する
+// https://docs.google.com/spreadsheets/d/xxx/edit...
+const fileId = 'xxx';
+```
 4. index.html, js.html, css.html作成  
 ファイル > html > "index.html" 作成  
 js.html, css.html を同様に作成  
